<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_introduction"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/contacts_introduction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/contacts_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <ScrollView
        android:id="@+id/scroll_contacts"
        android:layout_width="368dp"
        android:layout_height="462dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_introduction">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/text_financal_assist_website_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_financal_assist_website_heading"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_financal_assist_website_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_financal_assist_content"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/text_postgrad_fees_website_heading2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_postgrad_fees_website_heading"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_postgrad_fees_website_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_postgrad_fees_website_content"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/text_undergrad_fees_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_undergrad_fees_website_heading"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_undergrad_fees_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_undergrad_fees_website_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/text_support_website_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_support_website_heading"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_support_website_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_support_website_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/text_acco_website_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_acco_website_heading"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_acco_website_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_acco_website_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/text_financal_support_website_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_financal_support_website_heading"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_financal_support_website_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_financal_support_content"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>